--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.primary-inp-wrapper {
+  width: 100%;
+  max-width: 693px;
+}
+
+.primary-inp-wrapper select {
+  min-width: 100%;
+}
